--- a/MockupProject_K30_DotNet/MockupProject_K30_DotNet/MockupProject_K30_DotNet.csproj
+++ b/MockupProject_K30_DotNet/MockupProject_K30_DotNet/MockupProject_K30_DotNet.csproj
@@ -72,6 +72,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DataAccessLayer\EmployeeDAL.cs" />
     <Compile Include="DataAccessLayer\LinQModel.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
